cluster/apps/flux-system/flux-operator/app/httproute.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.ok8.sh/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-operator
  namespace: flux-system
spec:
  hostnames:
    - "flux-operator.${SECRET_DOMAIN}"
  parentRefs:
    - name: external
      namespace: kube-system
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
